# ropds

./: .dockerignore  .gitignore  BENCHMARK.md  CHANGELOG.md  COVERAGE_REPORT.md  Cargo.toml  LICENSE  README.md  README_RU.md  THIRD-PARTY-LICENSES.md  build.rs  config.toml  config.toml.example
.github/workflows/: release.yml  tag-tests.yml
docker/: .env.example  Dockerfile  README.md  README_RU.md  docker-compose.build.override.yml  docker-compose.mysql.external.yml  docker-compose.mysql.sibling.yml  docker-compose.postgres.external.yml  docker-compose.postgres.sibling.yml  docker-compose.sqlite.yml  docker-compose.static.mount.yml  docker-compose.yml  entrypoint.sh  wait-for-db.sh
docker/config/: config.mysql.external.toml  config.mysql.sibling.toml  config.postgres.external.toml  config.postgres.sibling.toml  config.sqlite.toml  config.toml.example
docker/db/mysql/: docker-compose.yml
docker/db/postgres/: docker-compose.yml
locales/: en.toml  ru.toml
migrations/: 001_initial.sql  002_genres_seed.sql  004_catalog_archive_size.sql  008_bookshelf.sql  009_user_allow_upload.sql  011_unique_indexes.sql  012_genre_translations_schema.sql  014_genre_translations_ru.sql
migrations/mysql/: 005_reading_positions.sql  006_author_key.sql  007_suppressed_books.sql  008_fix_suppressed_books_path.sql  009_books_perf_indexes.sql  010_oauth.sql
migrations/pg/: 002_genres_seed.sql  005_reading_positions.sql  006_author_key.sql  007_suppressed_books.sql  008_books_perf_indexes.sql  009_oauth.sql
migrations/sqlite/: 001_initial.sql  005_reading_positions.sql  006_author_key.sql  007_suppressed_books.sql  008_books_perf_indexes.sql  009_oauth.sql
migrations_mysql/: 001_initial.sql  002_genres_seed.sql  003_user_last_login.sql  006_user_display_name.sql  007_admin_display_name.sql  008_bookshelf.sql  010_catalog_mtime.sql  011_unique_indexes.sql  012_genre_translations_schema.sql  013_genre_translations_en.sql
migrations_pg/: 001_initial.sql  002_genres_seed.sql  003_genre_translations_en.sql  003_user_last_login.sql  004_catalog_archive_size.sql  005_user_password_change_required.sql  006_user_display_name.sql  008_bookshelf.sql  010_catalog_mtime.sql  011_unique_indexes.sql  012_genre_translations_schema.sql
scripts/: README.md  README_RU.md  migrate_sqlite.py
service/: ropds.unit
service/proxy/: README.md  README_RU.md
src/: assets.rs  config.rs  djvu.rs  email.rs  error.rs  lib.rs  main.rs  password.rs  pdf.rs  scheduler.rs  state.rs  util.rs
src/db/: mod.rs  models.rs
src/db/queries/: authors.rs  books.rs  bookshelf.rs  catalogs.rs  counters.rs  genres.rs  mod.rs  oauth.rs  reading_positions.rs  series.rs  suppressed.rs  users.rs
src/oauth/: mod.rs
src/opds/: auth.rs  covers.rs  download.rs  feeds.rs  mod.rs  xml.rs
src/opds/v1/: feeds.rs  helpers.rs  mod.rs  xml.rs
src/opds/v2/: feeds.rs  helpers.rs  mod.rs
src/scanner/: book.rs  cover.rs  db.rs  inpx.rs  mod.rs  zip.rs
src/scanner/parsers/: epub.rs  fb2.rs  inpx.rs  mobi.rs  mod.rs
src/web/: admin.rs  auth.rs  context.rs  i18n.rs  mod.rs  oauth.rs  pagination.rs  upload.rs  views.rs
src/web/admin/: book_delete.rs  book_edit.rs  duplicates.rs  genres.rs  oauth_requests.rs  scan.rs  tests.rs  user_pages.rs
src/web/views/: bookshelf_handlers.rs  browse_handlers.rs  reader_handlers.rs  shared.rs  tests.rs
static/: manifest.webmanifest  offline.html  sw.js
static/css/: ropds.css  sopds.css
static/js/: idb-schema.js  reader-offline.js  reader.js  ropds.js  sopds.js
templates/: base.html
templates/web/: _bookshelf_card.html  _bookshelf_cards.html  _pagination.html  admin.html  authors.html  books.html  bookshelf.html  browse.html  catalogs.html  change_password.html  duplicates.html  genres.html  home.html  login.html  oauth_banned.html  oauth_pending.html  oauth_rejected.html  profile.html  reader.html  series.html  upload.html
tests/: docker_tests.rs
tests/data/: author_no_genre.epub  author_no_genre.fb2  cyrillic_book.fb2  digit_title.fb2  no_cover.epub  no_cover.fb2  quoted_title.fb2  series_no_genre.epub  series_no_genre.fb2  test_book.djvu  test_book.epub  test_book.fb2  test_book.mobi  title_only.epub  title_only.fb2
tests/docker/: mod.rs  mysql_tests.rs  postgres_tests.rs
tests/integration/: admin_series_tests.rs  admin_user_title_tests.rs  author_search_tests.rs  book_search_tests.rs  bookshelf_tests.rs  catalog_tests.rs  duplicates_tests.rs  mod.rs  opds2_tests.rs  opds_core_tests.rs  opds_language_facets_tests.rs  opds_recent_tests.rs  reader_tests.rs  recent_tests.rs  scanner_tests.rs  series_search_tests.rs  static_tests.rs  upload_tests.rs
