[package]
name = "ropds"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime & web framework
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }

# Templates
tera = "1"

# Cookies (for language preference)
axum-extra = { version = "0.10", features = ["cookie"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Database (any = runtime backend selection via URI scheme)
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "sqlite", "postgres", "mysql", "chrono", "migrate"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Scanner: filesystem, archives, XML parsing, images
walkdir = "2"
zip = "8"
quick-xml = "0.39"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "pnm"] }
encoding_rs = "0.8"

# URL encoding
urlencoding = "2"

# HMAC session signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Password hashing
argon2 = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }
