[package]
name = "ropds"
version = "0.11.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime & web framework
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6.10", features = ["trace", "cors", "compression-gzip", "compression-br"] }

# Templates
tera = "1"
include_dir = "0.7"
mime_guess = "2"

# Cookies (for language preference)
axum-extra = { version = "0.12.6", features = ["cookie"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Database (any = runtime backend selection via URI scheme)
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "sqlite", "postgres", "mysql", "chrono", "migrate"] }

# Date/time
chrono = { version = "0.4.44", features = ["serde"] }
time = "0.3"

# Scanner: filesystem, archives, XML parsing, images, parallelism
walkdir = "2"
zip = "8.6.0"
dashmap = "6"
quick-xml = { version = "0.40.0", features = ["encoding"] }
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "pnm"] }
mobi = "0.8"

# URL encoding
urlencoding = "2"

# HMAC session signing
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

# Password hashing
argon2 = "0.5"

# OAuth2 social login
openidconnect = "4.0.1"
oauth2         = "5.0"
reqwest    = { version = "0.12.28", features = ["json", "rustls-tls"], default-features = false }
lettre     = { version = "0.11.21", features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder"], default-features = false }
rand       = "0.10.1"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Testcontainers (opt-in, for Docker-based integration tests)
testcontainers-modules = { version = "0.15", optional = true, features = ["postgres", "mariadb"] }

[features]
test-postgres = ["testcontainers-modules"]
test-mysql = ["testcontainers-modules"]

[dev-dependencies]
tempfile = "3.27"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[build-dependencies]
walkdir = "2"
oxc_allocator = "0.130.0"
oxc_codegen = "0.130.0"
oxc_minifier = "0.130.0"
oxc_parser = "0.130.0"
oxc_span = "0.130.0"
sha2 = "0.11"
hex = "0.4"

[profile.release]
lto = "thin"
strip = "debuginfo"
